Add exams section

--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 %%%%%%%%%%%%%
 
 \section{Education} 
-Double Major in Computer Science and Applied Mathematics \\
+BS in Computer Science and Applied Mathematics \\
 University Honors Fellow at Texas A\&M University \\
 Expected Graduation: Spring 2018 \\ 
 GPA 3.75
@@ -42,12 +42,12 @@ GPA 3.75
 %%%%%%%%%%%%%%
 
 \section{Experience}
-{\bf Peer Teacher,} Texas A\&M University \hfill 2016---Today
+{\bf Peer Teacher,} TAMU Department of Computer Science \hfill 2016---Today
 \begin{itemize} \itemsep -2pt
     \item Mentor and tutor students in computer science
 \end{itemize}
 
-{\bf Research Assistant,} Texas A\&M University \hfill Summer 2015, 2016
+{\bf Research Assistant,} TAMU Department of Mathematics \hfill Summer 2015, 2016
 \begin{itemize} \itemsep -2pt  % reduce space between items
     \item Analyzed sound quality of records from before and after \\ 
     RIAA standardization (2015)
@@ -55,13 +55,12 @@ GPA 3.75
     transposition decompositions of a permutation cycle. (2016)
 \end{itemize}
 
- 
-{\bf Student Assistant,} Texas A\&M University \hfill  2015---Today
+{\bf Student Assistant,} TAMU Department of Mathematics \hfill  2015---Today
 \begin{itemize} \itemsep -2pt %reduce space between items
     \item Graded homework and exams for multivariate calculus
 \end{itemize}
 
-{\bf Counselor,} SMaRT Camp, Texas A\&M University \hfill Summer 2016
+{\bf Counselor,} SMaRT Camp, TAMU Department of Mathematics \hfill Summer 2016
 \begin{itemize} \itemsep -2pt
     \item  Counselor at a two-week math camp for gifted \\ high school students
     \item Taught students advanced mathematics topics
@@ -91,7 +90,17 @@ GPA 3.75
 \section{Academic \\ Honors} 
 National Merit Scholar \\
 President's Endowed Scholarship \\
-Member of Pi Mu Epsilon (Math Honor Society)
+Member of Pi Mu Epsilon (Math Honor Society) \\
+Honors in Mathematics
+
+%%%%%%%%%
+% EXAMS %
+%%%%%%%%%
+
+\section{Exams}
+\begin{tabular}{l p{3in}}
+Actuarial Exam P: & 6
+\end{tabular}
 
 %%%%%%%%%%
 % SKILLS %
@@ -102,7 +111,7 @@ Member of Pi Mu Epsilon (Math Honor Society)
 \begin{tabular}{l p{3in}}
 \underline{Languages:} & C++, Java, R, Mathematica, 
 Javascript, PHP, C\#, \LaTeX \\
-\underline{Software:} &  NodeJS, Microsoft Office
+\underline{Software:} &  NodeJS, Microsoft Office, Git
 \end{tabular}
 
 \end{resume} 
