--- a/main.tex
+++ b/main.tex
@@ -111,7 +111,7 @@ Actuarial Exam P: & 6
 \begin{tabular}{l p{3in}}
 \underline{Languages:} & C++, Java, R, Mathematica, 
 Javascript, PHP, C\#, \LaTeX \\
-\underline{Software:} &  NodeJS, Microsoft Office, Git
+\underline{Software:} &  NodeJS, Microsoft Office, Git, Web Development
 \end{tabular}
 
 \end{resume} 
