Added horizontal line and information on research

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,8 @@
  
 \name{Matt Gaikema\\[12pt]} % the \\[12pt] adds a blank line after name
  
+\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
+ 
 \address{{\bf Current Address} \\ 101 Church Avenue, appt. 222 \\ College Station, TX 77840}
 \address{{\bf Permanent Address} \\ 22619 Arbor Stream Dr. \\ Katy, TX 77450}
 
@@ -51,8 +53,8 @@ GPA 3.75
 \begin{itemize} \itemsep -2pt  % reduce space between items
     \item Analyzed sound quality of records from before and after \\ 
     RIAA standardization (2015)
-    \item Worked on determining the total number of different \\
-    transposition decompositions of a permutation cycle. (2016)
+    \item Research involving transpositions and \\
+    the conjugacy classes of symmetric groups (2016)
 \end{itemize}
 
 {\bf Student Assistant,} TAMU Department of Mathematics \hfill  2015---Today
