Add CMake to skills

--- a/main.tex
+++ b/main.tex
@@ -113,11 +113,8 @@ Actuarial Exam P: & 6
 \begin{tabular}{l p{3in}}
 \underline{Languages:} & C++, Java, R, Mathematica, 
 Javascript, PHP, C\#, \LaTeX \\
-\underline{Software:} &  NodeJS, Microsoft Office, Git, Web Development
+\underline{Software:} &  NodeJS, CMake, Git, Web Development
 \end{tabular}
 
 \end{resume} 
 \end{document} 
-
-
-
