Add linux and engr honors

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@ GPA 3.75
 National Merit Scholar \\
 President's Endowed Scholarship \\
 Member of Pi Mu Epsilon (Math Honor Society) \\
-Honors in Mathematics
+Honors in Mathematics and Engineering
 
 %%%%%%%%%
 % EXAMS %
@@ -113,7 +113,7 @@ Actuarial Exam P: & 6
 \begin{tabular}{l p{3in}}
 \underline{Languages:} & C++, Java, R, Mathematica, 
 Javascript, PHP, C\#, \LaTeX \\
-\underline{Software:} &  NodeJS, CMake, Git, Web Development
+\underline{Software:} &  NodeJS, CMake, Git, Linux
 \end{tabular}
 
 \end{resume} 
