commit before restart

--- a/main.tex
+++ b/main.tex
@@ -112,7 +112,7 @@ Actuarial Exam P: & 6
 \section{Computer \\ Skills}
 \begin{tabular}{l p{3in}}
 \underline{Languages:} & C++, Java, R, Mathematica, 
-Javascript, PHP, C\#, \LaTeX \\
+Javascript, PHP, C\#, Python, \LaTeX \\
 \underline{Software:} &  NodeJS, CMake, Git, Linux
 \end{tabular}
 
