--- a/res.cls
+++ b/res.cls
@@ -1,6 +1,7 @@
 % RESUME DOCUMENT STYLE -- Released 23 Nov 1989
 %    for LaTeX version 2.09
 % Copyright (C) 1988,1989 by Michael DeCorte
+% Modified 2016 by Matt Gaikema
 
 \typeout{Document Style `res' <26 Sep 89>.}
 
