--- a/main.tex
+++ b/main.tex
@@ -1,42 +1,58 @@
 % Resume for Matt Gaikema
 % Follows the res2 template found at https://www.rpi.edu/dept/arc/training/latex/resumes/
-% This file uses the resume document class (res.cls)
+% This file uses the resume document class (res.cls).
+% Another example using the res.cls is found here: https://www.overleaf.com/articles/jteppinette-resume/wcsdpbkfmstz
 
-\documentclass[margin]{res} 
-% the margin option causes section titles to appear to the left of body text 
-\textwidth=5.2in % increase textwidth to get smaller right margin
+\documentclass[resmargin, line]{res} 
+% The margin option causes section titles to appear to the left of body text 
+\textwidth=5.5in % increase textwidth to get smaller right margin
+% http://tex.stackexchange.com/a/43205/89290
+\topmargin=-0.5in
+\oddsidemargin -.5in
+\evensidemargin -.5in
+\textwidth=6.0in
+\itemsep=0in
+\parsep=0in
+% http://tex.stackexchange.com/a/10190/89290
+\addtolength{\textheight}{.5in}
 
 \usepackage[colorlinks = true,
             linkcolor = blue,
             urlcolor  = blue,
             citecolor = blue,
             anchorcolor = blue]{hyperref}
+\usepackage{helvet}
+%\usepackage[bottom=0.5in]{geometry}
+
+%\setlength{\textwidth}{5.1in}
 
 \begin{document} 
  
-\name{Matt Gaikema\\[12pt]} % the \\[12pt] adds a blank line after name
+% My name at the top
+%\moveleft.5\hoffset\centerline{\large\bf Matt Gaikema}
+\name{Matt Gaikema}
+% Horizontal line across top
+%\moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
  
-\noindent\makebox[\linewidth]{\rule{\paperwidth}{0.4pt}}
- 
-\address{{\bf Current Address} \\ 101 Church Avenue, appt. 222 \\ College Station, TX 77840}
-\address{{\bf Permanent Address} \\ 22619 Arbor Stream Dr. \\ Katy, TX 77450}
+\address{22619 Arbor Stream Dr. 
+\\ Katy, TX 77450 \\ (832)-683-9857}
+
+\address{\href{www.mattgaikema.com}{mattgaikema.com} \\
+\href{https://github.com/TexAgg}{github.com/TexAgg} \\
+\href{mailto:mgaikema1@gmail.com}{mgaikema1@gmail.com}}
 
  
 \begin{resume} 
- 
-\section{Contact} 
-\textbf{Website: }\href{www.mattgaikema.com}{mattgaikema.com} \\
-\textbf{Github: }\href{https://github.com/TexAgg}{github.com/TexAgg} \\
-\textbf{Email: }\href{mailto:mgaikema1@gmail.com}{mgaikema1@gmail.com}
 
 %%%%%%%%%%%%%
 % EDUCATION %
 %%%%%%%%%%%%%
 
-\section{Education} 
-BS in Computer Science and Applied Mathematics \\
+\section{Education}
+{\bf Texas A\&M University} \\
+Bachelor of Science in Computer Science and Applied Mathematics \\
 University Honors Fellow at Texas A\&M University \\
-Expected Graduation: Spring 2018 \\ 
+Expected Graduation: May 2018 \\ 
 GPA 3.75
 
 %%%%%%%%%%%%%%
@@ -44,28 +60,28 @@ GPA 3.75
 %%%%%%%%%%%%%%
 
 \section{Experience}
-{\bf Peer Teacher,} TAMU Department of Computer Science \hfill 2016---Today
+{\bf  Department of Computer Science,} Texas A\&M University \hfill 2016---Present
 \begin{itemize} \itemsep -2pt
+    \item[] {\bf Peer Teacher}
     \item Mentor and tutor students in computer science
+    \item Help them debug and analyze their C++ programs
 \end{itemize}
 
-{\bf Research Assistant,} TAMU Department of Mathematics \hfill Summer 2015, 2016
+{\bf Department of Mathematics,} Texas A\&M University
 \begin{itemize} \itemsep -2pt  % reduce space between items
-    \item Analyzed sound quality of records from before and after \\ 
+    \item[] {\bf Research Assistant} \hfill Summer 2015, 2016
+    \item Analyzed sound quality of vinyls from before and after
     RIAA standardization (2015)
-    \item Research involving transpositions and \\
+    \item Research involving transpositions and
     the conjugacy classes of symmetric groups (2016)
-\end{itemize}
+    \item Wrote a program to compute the entries and eigensystem of the integer partition matrix
 
-{\bf Student Assistant,} TAMU Department of Mathematics \hfill  2015---Today
-\begin{itemize} \itemsep -2pt %reduce space between items
-    \item Graded homework and exams for multivariate calculus
-\end{itemize}
+    \item[] {\bf Student Assistant} \hfill 2015---Present
+    \item Graded homework and exams for multivariate calculus class of over 90 students
 
-{\bf Counselor,} SMaRT Camp, TAMU Department of Mathematics \hfill Summer 2016
-\begin{itemize} \itemsep -2pt
-    \item  Counselor at a two-week math camp for gifted \\ high school students
-    \item Taught students advanced mathematics topics
+    \item[] {\bf SMaRT Camp Counselor} \hfill Summer 2016
+    \item  Counselor at a two-week math camp for gifted high school students \\ from around the country
+    \item Taught students how to make formal proofs \\ and introduced them to advanced mathematics topics
 \end{itemize}
 
 %%%%%%%%%%%%%%
@@ -73,16 +89,22 @@ GPA 3.75
 %%%%%%%%%%%%%%
 
 \section{Extracurricular Activities} 
-{\bf Webmaster,} Math Club \hfill 2016---Today
+{\bf Webmaster,} Math Club \hfill 2016---Present
 \begin{itemize} \itemsep -2pt
     \item Created Math Club website from scratch, using PHP
-    \item Maintain and update website
+    \item Maintain and update website, and communicate upcoming events
 \end{itemize}
 
-{\bf Member,} Aggie Coding Club \hfill 2016---Today
+{\bf Member,} Aggie Coding Club \hfill 2016---Present
 \begin{itemize} \itemsep -2pt
     \item One of the developers for the original website 
     \item Created the information page
+\end{itemize}
+
+{\bf Champe-Fitzhugh International Honors Leadership Seminar} \hfill July, 2014
+\begin{itemize} \itemsep -2pt
+    \item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants
+    \item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture
 \end{itemize}
 
 %%%%%%%%%%
@@ -93,16 +115,11 @@ GPA 3.75
 National Merit Scholar \\
 President's Endowed Scholarship \\
 Member of Pi Mu Epsilon (Math Honor Society) \\
-Honors in Mathematics and Engineering
-
-%%%%%%%%%
-% EXAMS %
-%%%%%%%%%
-
-\section{Exams}
-\begin{tabular}{l p{3in}}
-Actuarial Exam P: & 6
-\end{tabular}
+Honors in Mathematics and Engineering \\
+MathFest
+\begin{itemize}
+    \item One of two students selected by Math Honors faculty \\ to attend national math conference, with all expenses paid
+\end{itemize}
 
 %%%%%%%%%%
 % SKILLS %
