Add github link

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \mobile{(832)-683-9857}
 \email{mgaikema1@gmail.com}
 \homepage{www.mattgaikema.com}
-\extrainfo{https://github.com/TexAgg}
+\social[github]{TexAgg}
 
 \begin{document}
 \vspace*{-2\baselineskip}
@@ -25,7 +25,7 @@
 %%%%%%%%%%%%%
 
 \section{Education}
-\cventry{2014-2018}{Bachelor of Science in Computer Science and Applied Mathematics}{Texas A\&M University}{College Station, Tx}{3.75/4.0}{University Honors Fellow}
+\cventry{2014---2018}{Bachelor of Science in Computer Science and Applied Mathematics}{Texas A\&M University}{College Station, Tx}{3.75/4.0}{University Honors Fellow}
 
 \vspace*{-1\baselineskip}
 
@@ -57,7 +57,7 @@
         \item Graded homework and exams for multivariate calculus class of over 90 students
     \end{itemize}
 }
-\cventry{2016}{SMaRT Camp Councelor}{Departament of Mathematics}{Texas A\&M University}{}{
+\cventry{Summer 2016}{SMaRT Camp Councelor}{Departament of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item  Counselor at a two-week math camp for gifted high school students \\ from around the country
         \item Taught students how to make formal proofs \\ and introduced them to advanced mathematics topics
@@ -73,19 +73,19 @@
 
 \section{Extracurricular Activities}
 
-\cventry{2016}{Webmaster}{Math Club}{}{}{
+\cventry{2016---Present}{Webmaster}{Math Club}{}{}{
     \begin{itemize}
         \item Created Math Club website from scratch, using PHP
         \item Maintain and update website, and communicate upcoming events
     \end{itemize}
 }
-\cventry{2016}{Member}{Aggie Coding Club}{}{}{
+\cventry{2016---Present}{Member}{Aggie Coding Club}{}{}{
     \begin{itemize}
-        \item One of the developers for the original website 
+        \item One of the designers and developers for the original website 
         \item Created the information page
     \end{itemize}
 }
-\cventry{2014}{participant}{Champe-Fitzhugh International Honors Leadership Seminar}{Texas A\&M University}{}{
+\cventry{Summer 2014}{Participant}{Champe-Fitzhugh International Honors Leadership Seminar}{}{}{
     \begin{itemize}
         \item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants
         \item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture
