add weekly review

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,8 @@
 \cventry{2016---Present}{Peer Teacher}{Departament of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Mentor and tutor students in computer science
-        \item Help them debug and analyze their C++ programs
+        \item Assist students one on one with debugging and analyzing their C++ programs
+        \item Give weekly review lessons on discrete mathematics
     \end{itemize}
 }
 \cventry{2015---Present}{Research Assistant}{Departament of Mathematics}{Texas A\&M University}{}{
@@ -60,7 +61,7 @@
 \cventry{Summer 2016}{SMaRT Camp Councelor}{Departament of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item  Counselor at a two-week math camp for gifted high school students \\ from around the country
-        \item Taught students how to make formal proofs \\ and introduced them to advanced mathematics topics
+        \item Taught students how to make formal proofs and introduced them to advanced mathematics topics
     \end{itemize}
 }
 
