--- a/main.tex
+++ b/main.tex
@@ -47,8 +47,7 @@
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after
         RIAA standardization (2015)
-        \item Research involving transpositions and
-        the conjugacy classes of symmetric groups (2016)
+        \item Research involving transpositions and the conjugacy classes of symmetric groups (2016)
         \item Wrote a program to compute the entries and eigensystem of the integer partition matrix
     \end{itemize}
 }
@@ -58,9 +57,9 @@
         \item Graded homework and exams for multivariate calculus class of over 90 students
     \end{itemize}
 }
-\cventry{Summer 2016}{SMaRT Camp Councelor}{Departament of Mathematics}{Texas A\&M University}{}{
+\cventry{Summer 2016}{SMaRT Camp Counselor}{Departament of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
-        \item  Counselor at a two-week math camp for gifted high school students \\ from around the country
+        \item  Counselor at a two-week math camp for gifted high school students from around the country
         \item Taught students how to make formal proofs and introduced them to advanced mathematics topics
     \end{itemize}
 }
@@ -69,10 +68,10 @@
 
 
 %%%%%%%%%%%%%%
-% ACTIVITIES %
+% LEADERSHIP %
 %%%%%%%%%%%%%%
 
-\section{Extracurricular Activities}
+\section{Leadership}
 
 \cventry{2016---Present}{Webmaster}{Math Club}{}{}{
     \begin{itemize}
@@ -80,7 +79,7 @@
         \item Maintain and update website, and communicate upcoming events
     \end{itemize}
 }
-\cventry{2016---Present}{Member}{Aggie Coding Club}{}{}{
+\cventry{2016---Present}{Web Developer}{Aggie Coding Club}{}{}{
     \begin{itemize}
         \item One of the designers and developers for the original website 
         \item Created the information page
