--- a/main.tex
+++ b/main.tex
@@ -36,14 +36,14 @@
 
 \section{Work Experience}
 
-\cventry{2016---Present}{Peer Teacher}{Departament of Computer Science}{Texas A\&M University}{}{
+\cventry{2016---Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Mentor and tutor students in computer science
         \item Assist students one on one with debugging and analyzing their C++ programs
         \item Give weekly review lessons on discrete mathematics
     \end{itemize}
 }
-\cventry{2015---Present}{Research Assistant}{Departament of Mathematics}{Texas A\&M University}{}{
+\cventry{2015---Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after
         RIAA standardization (2015)
@@ -51,13 +51,13 @@
         \item Wrote a program to compute the entries and eigensystem of the integer partition matrix
     \end{itemize}
 }
-\cventry{2015---Present}{Student Assistant}{Departament of Mathematics}{Texas A\&M University}{}
+\cventry{2015---Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
 {
     \begin{itemize}
         \item Graded homework and exams for multivariate calculus class of over 90 students
     \end{itemize}
 }
-\cventry{Summer 2016}{SMaRT Camp Counselor}{Departament of Mathematics}{Texas A\&M University}{}{
+\cventry{Summer 2016}{SMaRT Camp Counselor}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item  Counselor at a two-week math camp for gifted high school students from around the country
         \item Taught students how to make formal proofs and introduced them to advanced mathematics topics
