--- a/main.tex
+++ b/main.tex
@@ -115,7 +115,7 @@
 \vspace*{-1.5\baselineskip}
 \cventry{2015}{MathFest}{}{}{}{
     \begin{itemize}
-        \item One of two students selected by Math Honors faculty \\ to attend national math conference, with all expenses paid
+        \item One of two students selected by Math Honors faculty to attend national math conference, with all expenses paid
     \end{itemize}
 }
 
@@ -128,6 +128,6 @@
 
 \section{Skills}
 \cvcomputer{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX}{}{}
-\cvcomputer{Software}{NodeJS, CMake, Git, Linux}{}{}
+\cvcomputer{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}{}{}
 
 \end{document}
