--- a/main.tex
+++ b/main.tex
@@ -21,11 +21,39 @@
 
 
 %%%%%%%%%%%%%
+% OBJECTIVE %
+%%%%%%%%%%%%%
+
+\section{Objective}
+
+To obtain a Summer 2017 Internship in Computer Science.
+
+\vspace*{-1\baselineskip}
+
+
+%%%%%%%%%%%%%
 % EDUCATION %
 %%%%%%%%%%%%%
 
 \section{Education}
-\cventry{2014---2018}{Bachelor of Science in Computer Science and Applied Mathematics}{Texas A\&M University}{College Station, Tx}{3.75/4.0}{University Honors Fellow}
+
+\cventry{2014 - 2018}{Bachelor of Science in \textbf{Computer Science} and \textbf{Applied Mathematics}}
+{Texas A\&M University}
+{College Station, Texas}
+{3.75/4.0}
+{University Honors Fellow}
+
+\vspace*{-1\baselineskip}
+
+
+%%%%%%%%%%
+% SKILLS %
+%%%%%%%%%%
+
+\section{Skills}
+% http://tex.stackexchange.com/questions/95045/how-to-prevent-breaklines-inside-cvcomputer-in-moderncv
+\cvitem{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX}
+\cvitem{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}
 
 \vspace*{-1\baselineskip}
 
@@ -36,31 +64,30 @@
 
 \section{Work Experience}
 
-\cventry{2016---Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
+\cventry{2016 - Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
-        \item Mentor and tutor students in computer science
-        \item Assist students one on one with debugging and analyzing their C++ programs
-        \item Give weekly review lessons on discrete mathematics
+        \item Mentor and tutor hundreds of students in computer science.
+        \item Assist students one-on-one with debugging and analyzing their C++ programs.
+        \item Lead weekly review lessons on discrete mathematics.
     \end{itemize}
 }
-\cventry{2015---Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
+\cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
-        \item Analyzed sound quality of vinyls from before and after
-        RIAA standardization (2015)
-        \item Research involving transpositions and the conjugacy classes of symmetric groups (2016)
-        \item Wrote a program to compute the entries and eigensystem of the integer partition matrix
+        \item Analyzed sound quality of vinyls from before and after RIAA standardization (2015).
+        \item Research involving transpositions and the conjugacy classes of symmetric groups (2016).
+        \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
     \end{itemize}
 }
-\cventry{2015---Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
+\cventry{2015 - Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
 {
     \begin{itemize}
-        \item Graded homework and exams for multivariate calculus class of over 90 students
+        \item Graded homework and exams for multivariate calculus class of over 90 students.
     \end{itemize}
 }
 \cventry{Summer 2016}{SMaRT Camp Counselor}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
-        \item  Counselor at a two-week math camp for gifted high school students from around the country
-        \item Taught students how to make formal proofs and introduced them to advanced mathematics topics
+        \item Served as a counselor at a two-week math camp for twenty gifted high school students from around the country.
+        \item Taught students how to make formal proofs and introduced them to advanced mathematics topics.
     \end{itemize}
 }
 
@@ -73,22 +100,22 @@
 
 \section{Leadership}
 
-\cventry{2016---Present}{Webmaster}{Math Club}{}{}{
+\cventry{2016 - Present}{Webmaster}{Math Club}{}{}{
     \begin{itemize}
-        \item Created Math Club website from scratch, using PHP
-        \item Maintain and update website, and communicate upcoming events
+        \item Created Math Club website from scratch, using PHP.
+        \item Maintain and update website, and communicate upcoming events.
     \end{itemize}
 }
-\cventry{2016---Present}{Web Developer}{Aggie Coding Club}{}{}{
+\cventry{2016 - Present}{Web Developer}{Aggie Coding Club}{}{}{
     \begin{itemize}
-        \item One of the designers and developers for the original website 
-        \item Created the information page
+        \item Assisted in the design and development for the original website.
+        \item Created the information page.
     \end{itemize}
 }
 \cventry{Summer 2014}{Participant}{Champe-Fitzhugh International Honors Leadership Seminar}{}{}{
     \begin{itemize}
-        \item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants
-        \item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture
+        \item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants.
+        \item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture.
     \end{itemize}
 }
 
@@ -101,6 +128,8 @@
 
 \section{Honors and Awards}
 \vspace*{-1\baselineskip}
+\cventry{2016}{First place in HackDFW Ilumi Smart Bulb challenge}{}{}{}{}
+\vspace*{-1.5\baselineskip}
 % National Merit Scholar
 \cventry{}{National Merit Scholar}{}{}{}{}
 \vspace*{-1.5\baselineskip}
@@ -115,19 +144,8 @@
 \vspace*{-1.5\baselineskip}
 \cventry{2015}{MathFest}{}{}{}{
     \begin{itemize}
-        \item One of two students selected by Math Honors faculty to attend national math conference, with all expenses paid
+        \item One of two students selected by Math Honors faculty to attend national math conference, with all expenses paid.
     \end{itemize}
 }
-
-\vspace*{-1\baselineskip}
-
-
-%%%%%%%%%%
-% SKILLS %
-%%%%%%%%%%
-
-\section{Skills}
-\cvcomputer{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX}{}{}
-\cvcomputer{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}{}{}
 
 \end{document}
