--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage[utf8]{inputenc}
 % http://tex.stackexchange.com/a/39030/89290
-\usepackage[scale=0.8, top=2cm, left=2cm, right=2cm, bottom=2cm]{geometry}
+% http://tex.stackexchange.com/a/68797/89290
+\usepackage[scale=0.75, top=1.5cm, left=1.5cm, right=1.5cm, bottom=1.5cm, bmargin=1cm, footnotesep=1cm]{geometry}
 \moderncvtheme[black]{banking}
 % http://tex.stackexchange.com/a/191768/89290
 \nopagenumbers
@@ -66,15 +67,15 @@ To obtain a Summer 2017 Internship in Computer Science.
 
 \cventry{2016 - Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
-        \item Mentor and tutor hundreds of students in computer science.
-        \item Assist students one-on-one with debugging and analyzing their C++ programs.
-        \item Lead weekly review lessons on discrete mathematics.
+        \item Support six professors in their course load by mentoring and tutoring hundreds of students in computer science.
+        \item Assist students one-on-one with debugging and analyzing their C++ programs in office hours.
+        \item Selected to lead weekly review lessons on discrete mathematics.
     \end{itemize}
 }
 \cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
-        \item Analyzed sound quality of vinyls from before and after RIAA standardization (2015).
-        \item Research involving transpositions and the conjugacy classes of symmetric groups (2016).
+        \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
+        \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle (2016).
         \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
     \end{itemize}
 }
@@ -102,13 +103,13 @@ To obtain a Summer 2017 Internship in Computer Science.
 
 \cventry{2016 - Present}{Webmaster}{Math Club}{}{}{
     \begin{itemize}
-        \item Created Math Club website from scratch, using PHP.
+        \item Created website for Math Club (main department student group) from scratch, using PHP.
         \item Maintain and update website, and communicate upcoming events.
     \end{itemize}
 }
 \cventry{2016 - Present}{Web Developer}{Aggie Coding Club}{}{}{
     \begin{itemize}
-        \item Assisted in the design and development for the original website.
+        \item Key member of the development team for the original website.
         \item Created the information page.
     \end{itemize}
 }
@@ -127,6 +128,7 @@ To obtain a Summer 2017 Internship in Computer Science.
 %%%%%%%%%%
 
 \section{Honors and Awards}
+
 \vspace*{-1\baselineskip}
 \cventry{2016}{First place in HackDFW Ilumi Smart Bulb challenge}{}{}{}{}
 \vspace*{-1.5\baselineskip}
@@ -137,8 +139,9 @@ To obtain a Summer 2017 Internship in Computer Science.
 \cventry{}{President's Endowed Scholarship}{}{}{}{}
 \vspace*{-1.5\baselineskip}
 % PME
-\cventry{}{Member of Pi Mu Epsilon (Math Honor Society)}{}{}{}{}
-\vspace*{-1.5\baselineskip}
+\cventry{2015 - 2016}{Member of Pi Mu Epsilon (Math Honor Society)}{}{}{}{
+Elected Webmaster (2016)}
+\vspace*{-1\baselineskip}
 % Honors student
 \cventry{}{Honors in Mathematics and Engineering}{}{}{}{}
 \vspace*{-1.5\baselineskip}
