--- a/main.tex
+++ b/main.tex
@@ -129,26 +129,10 @@ To obtain a Summer 2017 Internship in Computer Science.
 
 \section{Honors and Awards}
 
-\vspace*{-1\baselineskip}
-\cventry{2016}{First place in HackDFW Ilumi Smart Bulb challenge}{}{}{}{}
-\vspace*{-1.5\baselineskip}
-% National Merit Scholar
-\cventry{}{National Merit Scholar}{}{}{}{}
-\vspace*{-1.5\baselineskip}
-% PES
-\cventry{}{President's Endowed Scholarship}{}{}{}{}
-\vspace*{-1.5\baselineskip}
-% PME
-\cventry{2015 - 2016}{Member of Pi Mu Epsilon (Math Honor Society)}{}{}{}{
-Elected Webmaster (2016)}
-\vspace*{-1\baselineskip}
-% Honors student
-\cventry{}{Honors in Mathematics and Engineering}{}{}{}{}
-\vspace*{-1.5\baselineskip}
-\cventry{2015}{MathFest}{}{}{}{
-    \begin{itemize}
-        \item One of two students selected by Math Honors faculty to attend national math conference, with all expenses paid.
-    \end{itemize}
-}
+\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016)---Elected Webmaster}
+\cvline{National Merit Scholar}{(2014 - 2018)}
+\cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
+\cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
+\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
 
 \end{document}
