--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 % http://tex.stackexchange.com/a/39030/89290
 % http://tex.stackexchange.com/a/68797/89290
-\usepackage[scale=0.75, top=1.5cm, left=1.5cm, right=1.5cm, bottom=1.5cm, bmargin=1cm, footnotesep=1cm]{geometry}
+\usepackage[scale=0.75, top=2cm, left=2cm, right=2cm, bottom=2cm, bmargin=1cm, footnotesep=1cm]{geometry}
 \moderncvtheme[black]{banking}
 % http://tex.stackexchange.com/a/191768/89290
 \nopagenumbers
@@ -55,6 +55,7 @@ To obtain a Summer 2017 Internship in Computer Science.
 % http://tex.stackexchange.com/questions/95045/how-to-prevent-breaklines-inside-cvcomputer-in-moderncv
 \cvitem{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX}
 \cvitem{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}
+\cvline{Passed Actuarial Exam P}{Scored 6/10}
 
 \vspace*{-1\baselineskip}
 
@@ -110,7 +111,6 @@ To obtain a Summer 2017 Internship in Computer Science.
 \cventry{2016 - Present}{Web Developer}{Aggie Coding Club}{}{}{
     \begin{itemize}
         \item Key member of the development team for the original website.
-        \item Created the information page.
     \end{itemize}
 }
 \cventry{Summer 2014}{Participant}{Champe-Fitzhugh International Honors Leadership Seminar}{}{}{
@@ -134,5 +134,6 @@ To obtain a Summer 2017 Internship in Computer Science.
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
 \cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
+%\cvline{Capital One Summit for Developing  Leaders}{(2015) }
 
 \end{document}
