Add phony targets and remove web target

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \email{mgaikema1@gmail.com}
 \homepage{www.mattgaikema.com}
 \social[github]{TexAgg}
+%\social[linkedin]{matthew-gaikema}
 
 \begin{document}
 \vspace*{-2\baselineskip}
