Added cs research

--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,11 @@ To obtain a Summer 2017 Internship in Computer Science.
         \item Selected to lead weekly review lessons on discrete mathematics.
     \end{itemize}
 }
+\cventry{2016 - Present}{Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
+    \begin{itemize}
+        \item Research parametrized algorithms for hard problems.
+    \end{itemize}
+}
 \cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
@@ -130,11 +135,11 @@ To obtain a Summer 2017 Internship in Computer Science.
 
 \section{Honors and Awards}
 
-\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016)---Elected Webmaster}
+%\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016)---Elected Webmaster}
 \cvline{National Merit Scholar}{(2014 - 2018)}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
-\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
+%\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
 %\cvline{Capital One Summit for Developing  Leaders}{(2015) }
 
 \end{document}
