--- a/cv.tex
+++ b/cv.tex
@@ -30,6 +30,26 @@
 {College Station, Texas}
 {3.75/4.0}
 {University Honors Fellow}
+\cvitem{Courses}{
+    \begin{itemize}
+        \item CSCE 121: Intro to Programming Design and Concepts
+        \item Math 220: Foundations of Math
+        \item Math 221: Several Variable Calculus
+        \item Stat 211\&212: Principles of Statistics I\&II
+        \item CSCE 221: Data Structures and Algorithms
+        \item Math 308: Differential Equations
+        \item Math 323: Linear Algebra
+        \item CSCE 312: Computer Organization
+        \item CSCE 314: Programming Languages
+        \item Math 409: Advanced Calculus
+        \item Math 411: Math Probability
+        \item Math 415\&416: Modern Algebra I\&II
+        \item Math 407: Complex Variables
+        \item Math 414: Fourier Series and Wavelets
+        \item Math 442: Math Modeling
+        \item Math 470: Cryptography
+    \end{itemize}
+}
 
 
 %%%%%%%%%%
@@ -117,8 +137,15 @@
 \cvline{National Merit Scholar}{(2014 - 2018)}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
-\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
 \cvline{Capital One Summit for Developing  Leaders}{(2015)}
 
+
+%%%%%%%%%%%%%%%
+% CONFERENCES %
+%%%%%%%%%%%%%%%
+
+\section{Conferences}
+
+\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
 
 \end{document}
