--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,5 @@
+% Source code for my resume.
+
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage[utf8]{inputenc}
 % http://tex.stackexchange.com/a/39030/89290
