--- a/cv.tex
+++ b/cv.tex
@@ -58,6 +58,30 @@
 %\cvline{Passed Actuarial Exam P}{Scored 6/10}
 
 
+%%%%%%%%%%%%%%%%%%%%%%%
+% RESEARCH EXPERIENCE %
+%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Research Experience}
+
+\cventry{Fall 2016 - Present}{Undergraduate Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
+    \begin{itemize}
+        \item Research parametrized algorithms for hard problems.
+    \end{itemize}
+}
+\cventry{Summer 2016}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
+    \begin{itemize}
+        \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle.
+        \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
+    \end{itemize}
+}
+\cventry{Summer 2015}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
+    \begin{itemize}
+        \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings.
+    \end{itemize}
+}
+
+
 %%%%%%%%%%%%%%%%%%%
 % WORK EXPERIENCE %
 %%%%%%%%%%%%%%%%%%%
@@ -69,18 +93,6 @@
         \item Support six professors in their course load by mentoring and tutoring hundreds of students in computer science.
         \item Assist students one-on-one with debugging and analyzing their C++ programs in office hours.
         \item Selected to lead weekly review lessons on discrete mathematics.
-    \end{itemize}
-}
-\cventry{2016 - Present}{Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
-    \begin{itemize}
-        \item Research parametrized algorithms for hard problems.
-    \end{itemize}
-}
-\cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
-    \begin{itemize}
-        \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
-        \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle (2016).
-        \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
     \end{itemize}
 }
 \cventry{2015 - Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
@@ -105,7 +117,7 @@
 
 \cventry{2016 - Present}{Webmaster}{Math Club}{}{}{
     \begin{itemize}
-        \item Created website for Math Club (main department student group) from scratch, using PHP.
+        \item Created website for Math Club (main department student organization) from scratch, using PHP.
         \item Maintain and update website, and communicate upcoming events.
     \end{itemize}
 }
@@ -142,6 +154,6 @@
 
 \section{Conferences}
 
-\cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}
+\cvline{Math Fest}{(2015) One of two students selected by honors faculty to attend national math conference.}
 
 \end{document}
