--- a/cv.tex
+++ b/cv.tex
@@ -5,6 +5,7 @@
 
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage[utf8]{inputenc}
+% List of themes: http://tex.stackexchange.com/a/44222/89290
 \moderncvtheme[black]{banking}
 
 \firstname{Matt}
@@ -14,6 +15,7 @@
 \email{mgaikema1@gmail.com}
 \homepage{www.mattgaikema.com}
 \social[github]{TexAgg}
+\social[linkedin]{matthew-gaikema}
 
 \begin{document}
 \makecvtitle
