--- a/cv.tex
+++ b/cv.tex
@@ -55,7 +55,7 @@
 %%%%%%%%%%
 
 \section{Computer Skills}
-\cvitem{Languages}{C++, Mathematica, \LaTeX, Java, R, Javascript, PHP, C\#, Python}
+\cvitem{Languages}{C++, Mathematica, \LaTeX, Java, R, Javascript, PHP, C\#, Python, Haskell}
 \cvitem{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}
 %\cvline{Passed Actuarial Exam P}{Scored 6/10}
 
