--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
 
 \section{Objective}
 
-To obtain a Summer 2017 Internship in Computer Science.
+To obtain a Summer 2017 Internship in Software Engineering.
 
 \vspace*{-1\baselineskip}
 
@@ -56,7 +56,7 @@ To obtain a Summer 2017 Internship in Computer Science.
 
 \section{Skills}
 % http://tex.stackexchange.com/questions/95045/how-to-prevent-breaklines-inside-cvcomputer-in-moderncv
-\cvitem{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX}
+\cvitem{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX, Haskell}
 \cvitem{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}
 \cvline{Passed Actuarial Exam P}{Scored 6/10}
 
